; ModuleID = '/home/carl/AnghaBench/GloVe/src/extr_shuffle.c_rand_long.c'
source_filename = "/home/carl/AnghaBench/GloVe/src/extr_shuffle.c_rand_long.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LRAND_MAX = common dso_local global i64 0, align 8
@RAND_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @rand_long to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rand_long(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* @LRAND_MAX, align 8
  %6 = load i64, i64* @LRAND_MAX, align 8
  %7 = load i64, i64* %2, align 8
  %8 = srem i64 %6, %7
  %9 = sub nsw i64 %5, %8
  store i64 %9, i64* %3, align 8
  br label %10

10:                                               ; preds = %17, %1
  %11 = load i64, i64* @RAND_MAX, align 8
  %12 = add nsw i64 %11, 1
  %13 = call i64 (...) @rand()
  %14 = mul nsw i64 %12, %13
  %15 = call i64 (...) @rand()
  %16 = add nsw i64 %14, %15
  store i64 %16, i64* %4, align 8
  br label %17

17:                                               ; preds = %10
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* %3, align 8
  %20 = icmp sge i64 %18, %19
  br i1 %20, label %10, label %21

21:                                               ; preds = %17
  %22 = load i64, i64* %4, align 8
  %23 = load i64, i64* %2, align 8
  %24 = srem i64 %22, %23
  ret i64 %24
}

declare dso_local i64 @rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
